ingress-demo/bye-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bye-app
  name: bye-app
  namespace: joebewda-netpol
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bye-app
  template:
    metadata:
      labels:
        app: bye-app
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: cache-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: cache-volume
        emptyDir: {}
