ingress-demo/bye-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bye-app
  name: bye-app
  namespace: joebewda-netpol
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: bye-app
