ingress-demo/hi-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hi-app
  name: hi-app
  namespace: joebewda-netpol
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: hi-app
